<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/odaberi_jezik"
            android:textSize="@dimen/title_textSize"
            android:layout_marginBottom="@dimen/margin_bigger"/>

        <RadioGroup
            android:id="@+id/languageRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioEnglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/engleski"/>

            <RadioButton
                android:id="@+id/radioSerbian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/srpski"/>
        </RadioGroup>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>